export enum moveState {
    AWAIT, ATTEMPTMOVE
}